# hackage-graph

./: .travis.yml  Main.hs  README.md  hackage-graph.cabal  stack.yaml
app/: MainAcmeEverything.hs  MainDot.hs
src/: Graph.hs  Main.hs  MainAcmeEverything.hs  MakeGraph.hs  PackageGraph.hs
